2001-04-13  Robert Collins <rbtcollins@hotmail.com>

	* libc/include/sys/unistd.h: Add pthread_atfork (Cygwin only).

Thu Apr 12 23:11:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* libc/include/sys/errno.h: Add ECASECLASH to indicate case clash
	on case insensitve file systems.

2001-04-12  Robert Collins <rbtcollins@hotmail.com>

	* libc/include/sys/features.h: Add appropriate defines for Cygwin
	pthread support.
	* libc/include/sys/signal.h: Remove unneeded __CYGWIN__ protection.
	* libc/include/sys/types.h: Protect __CYGWIN__ from the rtems pthreads
	types.  Include <cygwin/types.h> for the cygwin specific typedefs.

2001-04-04  Richard Sandiford  <rsandifo@redhat.com>

	* libc/include/machine/ieeefp.h: Comment about new configuration
	macros _FLT_LARGEST_EXPONENT_IS_NORMAL and _FLT_NO_DENORMALS.
	* libm/common/fdlib.h: Define new macros for testing floats.
	* libm/common/sf_*: Use them.
	* libm/math/ef_*: Likewise.
	* libm/math/sf_*: Likewise.

2001-03-29  Jeff Johnston  <jjohnstn@redhat.com>

	* libc/sys/arm/setjmp.S: Added .code 16 specifier for thumb-mode
	prolog to by-pass possible assembler error.

2001-03-21  Egor Duda  <deo@logos-m.ru>

        Allow building internal stubs for non-reentrant syscalls
        if target provides its own malloc
        * libc/reent/reent.c (errno): Move definition here.
        * libc/reent/sbrkr.c: From here.

2001-03-20  Danny Smith <dannysmith@users.sourceforge.net>

	* libc/include/sys/types.h (BSD int typedefs): Guard with
	_BSDTYPES_DEFINED rather than _WINSOCK_H.
	(fd_set): Add !defined __USE_W32_SOCKETS to guard; define
	_SYS_TYPES_FD_SET.
	* libc/include/sys/unistd.h (gethostname): Don't declare if defined
	(_WINSOCK_H) || defined (__USE_W32_SOCKETS).

Sat Mar 17 18:30:00 2001  Corinna Vinschen <corinna@vinschen.de>

	* libc/include/sys/unistd.h: Add _PC_POSIX_PERMISSONS and
	_PC_POSIX_SECURITY constants for Cygwin.

Wed Mar 14  9:34:00 2001  Corinna Vinschen <corinna@vinschen.de>
